--- a/google.css
+++ b/google.css
@@ -126,6 +126,13 @@ article
     box-shadow: 0px 2px 5px #a8a6a6;
 }
 
+form
+{
+    border: none;
+    min-width: 100px;
+    max-width: 430px;
+}
+
 #micro
 {
     display: flex;
@@ -136,6 +143,8 @@ article
 #micro img
 {
     width: 50%;
+    padding-top: 3px;
+    margin-right: -8px;
 }
 
 .recherche
@@ -155,11 +164,13 @@ article
     padding: 10px 15px 10px 15px;
     font-size: 12px;
     border: none;
+    border-radius: 0.2em;
 }
 
 button:hover
 {
-    border: 1px solid black;
+    border: 1px solid rgb(212, 212, 212);
+    border-radius: 0.2em;
     color: black;
 }
 
